# axm-forge

./: -  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  coverage.json  mkdocs.yml  pyproject.toml  wrangler.toml
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: badge-helpers.sh  test_badge_helpers.sh
.github/workflows/: axm-init.yml  axm-quality.yml  ci.yml  docs.yml  pre-commit-autoupdate.yml  publish.yml  release.yml
badges/: axm-audit.json  axm-init.json  coverage.json
badges/axm-anvil/: axm-audit.json  coverage.json
badges/axm-ast/: axm-audit.json  axm-init.json  coverage.json
badges/axm-audit/: axm-audit.json  axm-init.json
badges/axm-echo/: axm-audit.json  coverage.json
badges/axm-edit/: axm-audit.json  coverage.json
badges/axm-git/: axm-audit.json  axm-init.json  coverage.json
badges/axm-ingot/: axm-audit.json
badges/axm-init/: axm-audit.json  axm-init.json  coverage.json
badges/axm-mcp/: axm-audit.json
badges/axm-smelt/: axm-audit.json  axm-init.json  coverage.json
docs/: contributing.md  gen_ref_pages.py  getting-started.md  index.md
docs/assets/: custom.css
docs/explanation/: architecture.md  formats.md  glossary.md  scoring.md
docs/howto/: add-tool.md  audit.md  categories.md  check.md  ci-badge.md  custom-rules.md  describe.md  impact.md  index.md  mcp.md  migration-http.md  results.md  troubleshooting.md
docs/reference/: cli.md
docs/tutorials/: getting-started.md  quickstart.md
reports/axm-audit/: axm-anvil.json  axm-ast.json  axm-audit.json  axm-echo.json  axm-edit.json  axm-git.json  axm-ingot.json  axm-init.json  axm-mcp.json  axm-smelt.json  axm.json  summary.json
reports/axm-init/: axm-anvil.json  axm-ast.json  axm-audit.json  axm-echo.json  axm-edit.json  axm-git.json  axm-ingot.json  axm-init.json  axm-mcp.json  axm-smelt.json  axm.json  root.json  summary.json
reports/coverage/: axm-anvil.json  axm-ast.json  axm-audit.json  axm-echo.json  axm-edit.json  axm-git.json  axm-ingot.json  axm-init.json  axm-mcp.json  axm-smelt.json  axm.json
src/axm/: __init__.py  cli.py  witnesses.py
src/axm/hooks/: __init__.py  base.py
src/axm/tools/: __init__.py  base.py
src/axm_ast/: __init__.py  _version.py  cli.py  docstring_parser.py  formatters.py
src/axm_ast/core/: __init__.py  analyzer.py  cache.py  callers.py  context.py  dead_code.py  docs.py  flows.py  git_coupling.py  impact.py  parser.py  ranker.py  structural_diff.py  workspace.py
src/axm_ast/models/: __init__.py  nodes.py
src/axm_ast/tools/: __init__.py  callers.py  context.py  dead_code.py  describe.py  diff.py  docs.py  flows.py  graph.py  impact.py  inspect.py  search.py
src/axm_audit/: __init__.py  _version.py  cli.py  formatters.py
src/axm_audit/core/: __init__.py  auditor.py  runner.py  test_runner.py
src/axm_audit/models/: results.py
src/axm_audit/reporters/: __init__.py  reporters.py
src/axm_audit/tools/: audit.py  audit_test.py
src/axm_git/: __init__.py
src/axm_git/core/: runner.py  semver.py
src/axm_git/hooks/: commit_phase.py  create_branch.py  merge_squash.py
src/axm_git/tools/: branch.py  commit.py  commit_preflight.py  tag.py
src/axm_init/adapters/: workspace_patcher.py
src/axm_init/checks/: _utils.py  workspace.py
src/axm_init/core/: checker.py
src/axm_mcp/: cli.py  concurrency.py  discovery.py  lifecycle.py  mcp_app.py  plist_template.py  server.py  verify.py  verify_format.py  web_fetch.py  wrapping.py
src/axm_mcp/facade/: __init__.py  tools.py
tests/: conftest.py  test_analyzer.py  test_audit_migration.py  test_cache.py  test_callers.py  test_cli.py  test_compress.py  test_concurrency_integration.py  test_context.py  test_coupling_scoring.py  test_coverage_gaps.py  test_dead_code.py  test_dispatcher_schema.py  test_docs.py  test_docstring_parser.py  test_e2e_pipeline.py  test_external_tracing_hash.py  test_formatters.py  test_git_coupling.py  test_impact.py  test_isolation.py  test_lifecycle.py  test_mcp_app.py  test_mcp_bib.py  test_mcp_decoupled.py  test_mcp_tools.py  test_models.py  test_parser.py  test_path_warning.py  test_ranker.py  test_rich_output.py  test_runner.py  test_structural_diff.py  test_tool_result_text.py  test_tools.py  test_tools_base.py  test_typed_schema.py  test_verify_enrichment.py  test_verify_format.py  test_verify_tool.py  (+3 more)
tests/core/: test_auditor.py  test_auditor_integration.py  test_test_runner.py
tests/core/rules/: test__helpers.py  test_architecture.py  test_base.py  test_complexity.py  test_coverage.py  test_dead_code.py  test_dependencies.py  test_formatting.py  test_helpers.py  test_practices.py  test_pyproject.py  test_quality.py  test_rules.py  test_scoring_balance.py  test_security.py  test_structure.py
tests/e2e/: test_precommit_fixtures.py
tests/fixtures/sample_pkg/: utils.py
tests/functional/: __init__.py  test_flows.py
tests/hooks/: test_base.py
tests/integration/: test_app.py  test_app__read_pid.py  test_cli.py  test_concurrency.py  test_discovery__mcp_app.py  test_facade__mcp_app.py  test_lifecycle.py  test_mcp_decoupled.py  test_read_pid__write_pid.py  test_register_one__wrapping.py
tests/models/: test_results.py  test_results_formula.py  test_scoring_redesign.py
tests/reporters/: test_reporters.py
tests/tools/: test_audit.py  test_audit_test.py  test_base.py
tests/unit/: test___init__.py  test_base.py  test_base_2.py  test_cli.py  test_concurrency.py  test_coverage_gaps.py  test_disable_tools.py  test_discovery.py  test_dispatcher_schema.py  test_external_tracing.py  test_external_tracing_hash.py  test_lifecycle.py  test_mcp_app.py  test_mcp_bib.py  test_mcp_tools.py  test_path_warning.py  test_plist_template.py  test_runner.py  test_schema.py  test_server.py  test_text_wrapper.py  test_tools_commit.py  test_tools_preflight.py  test_tools_tag.py  test_typed_schema.py  test_verify.py  test_verify_format.py  test_version.py  test_witnesses.py  test_wrapping.py
tests/unit/adapters/: test_workspace_patcher.py
tests/unit/checks/: test__workspace.py  test_docs.py  test_workspace_checks.py
(+27 files in other folders)
