[project]
name = "axm-mcp"
dynamic = ["version"]
description = "AXM MCP Server — Runtime execution for the axm-protocols ecosystem"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Gabriel Jarry", email = "gabriel@axm-protocols.io" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "axm",
    "cyclopts>=4.5.1",
    "jinja2>=3.0.0",
    "mcp[cli]>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/axm-protocols/axm-nexus-mcp"
Documentation = "https://axm-protocols.github.io/axm-mcp/"
Repository = "https://github.com/axm-protocols/axm-nexus-mcp.git"
Issues = "https://github.com/axm-protocols/axm-nexus-mcp/issues"

# Optional dependencies — only packages published on PyPI
[project.optional-dependencies]
init   = ["axm-init"]
audit  = ["axm-audit"]
bib    = ["axm-bib"]
git    = ["axm-git"]
ast    = ["axm-ast"]
ticker = ["axm-ticket"]
engine = ["axm-engine"]
forge  = ["axm-ast", "axm-audit", "axm-init"]
web    = ["scrapling"]
all    = ["axm-init", "axm-audit", "axm-bib", "axm-git", "axm-ast", "axm-ticket", "axm-engine"]

[project.scripts]
axm-mcp = "axm_mcp:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "mcp/v(?P<version>.*)"
raw-options = { root = "../..", git_describe_command = "git describe --dirty --tags --long --match mcp/v*" }
fallback-version = "0.1.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/axm_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/axm_mcp"]

# ─────────────────────────────────────────────────────────────────────────────
# UV Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.15.1",
    "ruff==0.15.12",
    "mypy>=1.19",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-jsonschema>=4.26.0.20260202",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6.3",
]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
exclude = ["*/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "C901", "S", "T20", "RUF"]
ignore = ["S101", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]
"src/axm_mcp/discovery.py" = ["C901", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50
max-locals = 15

[tool.ruff.lint.isort]
known-first-party = ["axm_mcp"]

# ─────────────────────────────────────────────────────────────────────────────
# MyPy Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_explicit = true
pretty = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["scrapling.*"]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────
# Pytest Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--import-mode=importlib",
    "--cov=axm_mcp",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["axm_mcp"]
branch = true
relative_files = true
omit = ["*/tests/*"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.deptry]
pep621_dev_dependency_groups = ["dev"]
known_first_party = ["axm_mcp", "axm", "axm_nexus", "axm_engine"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

# ─────────────────────────────────────────────────────────────────────────────
# Git-Cliff Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to this project will be documented in this file.
"""
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [Unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {{ commit.message | upper_first }}\
    {% endfor %}
{% endfor %}
"""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
commit_parsers = [
    { message = "^chore", skip = true },
    { message = "^ci", skip = true },
    { message = "^feat", group = "🚀 Features" },
    { message = "^fix", group = "🐛 Bug Fixes" },
    { message = "^doc", group = "📚 Documentation" },
    { message = "^perf", group = "⚡ Performance" },
    { message = "^refactor", group = "🔧 Refactor" },
    { message = "^test", group = "🧪 Tests" },
]
tag_pattern = "mcp/v[0-9].*"
include_path = "packages/axm-mcp/**"
