[project]
name = "axm-forge-workspace"
version = "0.0.0"
requires-python = ">=3.12"
description = "AXM Forge workspace — axm-ast, axm-audit, axm-init, and axm-git under one roof"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Gabriel Jarry", email = "gabriel@axm-protocols.io" }]
keywords = ["axm", "ast", "audit", "scaffolding", "git", "quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://forge.axm-protocols.io"
Repository = "https://github.com/axm-protocols/axm-forge"
Documentation = "https://forge.axm-protocols.io"

dependencies = [
    "axm",
    "axm-anvil",
    "axm-ast",
    "axm-audit",
    "axm-edit",
    "axm-init",
    "axm-git",
    "axm-mcp",
    "axm-smelt",
    "axm-ingot",
    "axm-echo",
]

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "ruff==0.15.20",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocs-monorepo-plugin>=1.1",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
]

[tool.uv]
constraint-dependencies = [
    "requests>=2.33.0",
    "pygments>=2.20.0",
]

[tool.uv.workspace]
members = ["packages/*"]

# Pin torch to the CPU wheel on Linux (CI). The default PyPI Linux wheel is the
# CUDA build: its init imports cuda.bindings, which calls find_library("dl") ->
# subprocess.Popen(['/sbin/ldconfig', '-p']). On a GPU-less runner that fork is
# pointless, and when an echo test mocks subprocess to assert the in-process
# embedding guarantee, it interrupts torch mid-init -> "partially initialised
# module 'torch' has no attribute 'types'" (circular import) + SIGSEGV. The CPU
# wheel drops cuda.bindings entirely. macOS keeps its native wheel (CPU/MPS).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
axm = { workspace = true }
axm-anvil = { workspace = true }
axm-ast = { workspace = true }
axm-audit = { workspace = true }
axm-edit = { workspace = true }
axm-init = { workspace = true }
axm-git = { workspace = true }
axm-ingot = { workspace = true }
axm-echo = { workspace = true }
axm-mcp = { workspace = true }
axm-smelt = { workspace = true }

[tool.pytest.ini_options]
import_mode = "importlib"
testpaths = [
    "packages/axm/tests",
    "packages/axm-anvil/tests",
    "packages/axm-ast/tests",
    "packages/axm-audit/tests",
    "packages/axm-edit/tests",
    "packages/axm-init/tests",
    "packages/axm-git/tests",
    "packages/axm-mcp/tests",
    "packages/axm-smelt/tests",
    "packages/axm-ingot/tests",
    "packages/axm-echo/tests",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["PLR2004"]
